# GamingAgent

./: .gitmodules  README.md  api_costs_summary.csv  cost_calculator.ipynb  data_analysis.ipynb  pyproject.toml  requirements.txt
20250411_125043_Turnabout_Sisters_part1_vision-text_openai_o1-2024-12-17/dialog_history/: turnabout_sisters_part1.json
games/ace_attorney/: ace_agent.py  ace_attorney_1.json  ace_attorney_1_skip_conversations.json  reflection_worker.py  the_first_turnabout copy.json  the_first_turnabout.json  the_first_turnabout_test_sample.json  turnabout_sister_part1_overall_text.json  turnabout_sister_part2_overall_text.json  turnabout_sister_part2_test_sample.json  turnabout_sister_part3_overall_text.json  turnabout_sister_test_example.json  workers.py
games/ace_attorney/assets/: the_first_turnabout_overall_text.json  turnabout_sister_part3_overall_text.json
games/boxxel/: boxxel_agent.py  boxxel_agent_local.py  grid_annotations.json  image_grid.py  levels  sokoban.py  workers.py  workers_local.py
games/candy/: candy_agent.py  index.html  workers.py
games/candy/web/: app.js
games/game_2048/: 2048_agent.py  game.py  game_logic.py  logic.py  rlagent.py  train.py  workers.py
games/phoenix/: phoenix_agent.py  workers.py
games/sokoban/: levels  sokoban.py  sokoban_agent.py  sokoban_agent_local.py  workers.py
games/superMario/: mario_agent.py  workers.py
games/tetris/: speculators.py  tetris_agent.py  workers.py
tools/: api_cost_calculator.py  constants.py  model_prices.json  utils.py
tools/serving/: api_providers.py  model_costs.json
(+21 files in other folders)
